--- a/css/article.css
+++ b/css/article.css
@@ -27,59 +27,115 @@
     margin: auto;
 }
 .index-center{
-    width: 220px;
+    width: 1024px;
+    height: 654px;
     margin: 0 auto;
     text-align: center;
-    padding-top: 90px;
-}
-.index-center .h1{
-    margin-bottom: 124px;
-    font-family:"Times New Roman", Times, serif;
-    font-size: larger;
-}
-.index-center .img2{
-    margin-bottom: 33px;
-}
-.index-center p{
-    line-height: 80px;
-    color: #FFFFFF;
-    margin-bottom: 75px;
+    padding-top: 180px;
 }
 .index-center a{
     display: block;
-    width: 118px;
+    width: 1024px;
     height: 28px;
-    border:1px solid #fff;
     line-height: 28px;
     text-align: center;
-    color: #FFFFFF;
-    margin: 0 auto 50px;
+    color: dodgerblue;
+    margin: 48px auto 50px;
+    font-size: 150%;
+}
+.index-center a:hover{
+    display: block;
+    width: 1024px;
+    height: 28px;
+    line-height: 28px;
+    text-align: center;
+    color: dodgerblue;
+    margin: 48px auto 50px;
+    font-size: 150%;
+    text-decoration: underline;
+}
+.index-center p{
+    font-size: 300%;
+    font-weight: 500;
+}
+@keyframes scaleDraw {
+    0%{
+        transform: scale(1);
+    }
+    25%{
+        transform: scale(1.5);
+    }
+    50%{
+        transform: scale(1);
+    }
+    75%{
+        transform: scale(1.5);
+    }
 }
 
+.img1{
+    margin-bottom: 124px
+}
+
+.img1:hover{
+    margin-bottom: 124px;
+    animation: scaleDraw 5s ease-in-out infinite;
+}
+.about-bg{
+    background: url(../image/bg1.png);
+    height: 836px;
+    width: auto;
+}
 .content-about{
     width: 1140px;
     margin: 0 auto;
     padding-top: 64px;
 }
+.about-title{
+    font-size: 300%;
+    font-weight: 500;
+    text-align: center;
+    padding-top: 50px;
+}
 .about-logo{
+    padding-top: 10px;
     text-align: center;
 }
-.about-logo p{
-    line-height: 70px;
-    color: #a4a4a4;
+.about-logo img{
+    width: 70px;
 }
-.content-about ul{}
+.content-about ul{
+    padding-top: 100px;
+}
 .content-about ul li{
-    float: left;
-    width: 330px;
+    width: 220px;
     text-align: center;
-    margin-right: 70px;
+    margin-right: 240px;
+    float: left;
 }
 .content-about ul li.last{
     margin-right: 0;
 }
 .content-about ul li img{
-    width: 330px;
+    width: 220px;
+}
+@keyframes scaleDraw_about {
+    0%{
+        transform: scale(1);
+    }
+    25%{
+        transform: scale(1.1);
+    }
+    50%{
+        transform: scale(1);
+    }
+    75%{
+        transform: scale(1.1);
+    }
+}
+.content-about ul li img:hover{
+    width: 220px;
+    animation: scaleDraw_about 7s ease-in-out infinite;
 }
 .content-about ul li span{
     line-height: 84px;
@@ -91,134 +147,186 @@
     color: #AAAAAA;
     line-height: 20px;
 }
-.bg1{
-    background: #f3f3f3;
-}
 .content-design{
     width: 404px;
     margin: 0 auto;
     padding-top: 50px;
 }
-.design-logo{
-    text-align: center;
-    margin-bottom: 30px;
-}
-.content-design ul{
-    width: 1131px;
-}
-.content-design ul li{
-    width: 128px;
-    float: left;
-    margin-right: 10px;
-}
-.content-design ul li.last{
-    margin-right: 0;
-}
-.content-design ul li img{
-    margin-bottom: 10px;
-}
-.content-video{
-    text-align: center;
-}
-.video-logo{
-    padding-top: 54px;
-    margin-bottom: 32px;
-}
-.img7{}
 
-.content-contact{
-    background: url(../image/bg2.png) no-repeat;
-    width: 1280px;
-    height: 548px;
-    margin-top: 36px;
-}
-.contact-logo{
-    text-align: center;
-    padding-top: 78px;
-    margin-bottom: 54px;
-}
-.img8{
-    display: block;
-    margin: 0 auto;
-}
-.content-contact p{
-    text-align: center;
-    line-height: 90px;
-}
-.content-app{
-    width: 1200px;
-    margin: 0 auto;
-    padding-top: 76px;
-}
-.content-app img{
-    float: left;
-}
-.content-app div{
-    float: left;
-    width: 270px;
-    padding-left: 154px;
-    padding-top: 96px;
-
-}
-.content-app div img{
-    display: block;
-    margin: 0 auto 28px;
-    float: none;
-}
-.content-app div span{
-    line-height: 22px;
-    color: #AAAAAA;
-    font-size: 12px;
-    display: block;
-}
-
-.content-video2{
-    width: 1200px;
-    margin: 0 auto;
-    padding-top: 76px;
-}
-.content-video2 img{
-    float: left;
-}
-.content-video2 div{
-    float: left;
-    width: 108px;
-    padding-left: 30px;
-    padding-top: 60px;
-
-}
-.content-video2 div img{
-    display: block;
-    margin: 0 auto 20px;
-    float: none;
-}
-.content-video2 div p{
-    line-height: 22px;
-    color: #AAAAAA;
-    font-size: 12px;
-    display: block;
-}
-.content-music{
-    width: 333px;
+.content-game{
+    width: 1140px;
     margin: 0 auto;
     padding-top: 64px;
 }
-.content-music p{
-    line-height: 70px;
-    text-align: center;
-    color: #a4a4a4;
+
+.game-bg{
+    background: url(../image/bg1.png);
+    height: auto;
+    width: auto;
 }
-.img-logo{
-    display: block;
+.game-logo{
+    padding-top: 10px;
+    text-align: left;
+}
+.game-logo img{
+    width: 40px;
+    float: left;
+}
+
+.game-head{
+    padding-left: 40px;
+    font-size: 250%;
+    font-weight: 500;
+    padding-bottom: 20px;
+}
+.game-text{
+    padding-left: 30px;
+}
+.game-text p{
+    font-size: 150%;
+    font-weight: 300;
+    padding-top: 40px;
+    padding-left: 270px;
+    height: 300px;
+}
+.music-logo{
+    padding-top: 10px;
+    text-align: left;
+    position: absolute;
+}
+.music-logo img{
+    width: 40px;
+    float: left;
+}
+.game-text-img{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 40px;
+    width: 200px;
+    float: left;
+    box-shadow:10px 10px 10px rgba(0,0,0,.5);
+}
+.game-text-img:hover{
+    transform: scale(1.05);
+}
+
+.content-music{
+    width: 1140px;
     margin: 0 auto;
+    padding-top: 64px;
 }
-.img-con{
-    display: block;
-    margin: 0 auto 82px;
+@keyframes music-scale {
+    0%{
+        transform: rotate(50turn);
+    }
 }
-.content-music span{
-    line-height: 22px;
+
+.music-bg{
+    background: url(../image/bg1.png);
+    height: 836px;
+    width: auto;
+}
+.music-rotate{
+    width: 300px;
+}
+.music-rotate:hover {
+    width: 300px;
+    animation: music-scale 210s linear infinite;
+}
+.content-music ul{
+    margin-top: 0;
     text-align: center;
-    color: #aaaaaa;
-    display: block;
+}
+.content-music ul li{
+    width: 300px;
+    text-align: center;
+    margin-right: 80px;
+    float: left;
+}
+.content-music ul li p{
+    color: #666666;
+    font-size: 110%;
+    text-align: center;
+}
+.content-music ul li.last{
+    width: 220px;
+    text-align: center;
+    float: left;
+}
+.content-music ul li audio{
+    margin-top: 10px;
+}
+.content-music ul li img{
+    width: 300px;
+    margin-top: 200px;
+}
+
+.code-text-img{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 40px;
+    width: 200px;
+    float: left;
+}
+.code-rep-img1{
+    width: 400px;
+    float: right;
+}
+.code-bg{
+    background: url(../image/bg1.png);
+    height: 836px;
+    width: auto;
+}
+.code-text-img2{
+    margin-top: 100px;
+    margin-bottom: 20px;
+    margin-left: 40px;
+    width: 200px;
+    float: left;
+}
+.code-text-p{
+    margin-left: 30px;
+    margin-top: 100px;
+    float: left;
+}
+
+@keyframes scaleDraw2 {
+    0%{
+        transform: scale(1);
+    }
+    25%{
+        transform: scale(1.5);
+    }
+    50%{
+        transform: scale(1);
+    }
+    75%{
+        transform: scale(1.5);
+    }
+}
+
+.img2{
+    width: 120px;
+}
+
+.img2:hover{
+    width: 120px;
+    animation: scaleDraw2 5s ease-in-out infinite;
+}
+
+.contact-center{
+    width: 1024px;
+    height: 654px;
+    margin: 0 auto;
+    text-align: center;
+    padding-top: 40px;
+}
+
+.contact-center ul li{
+    margin-top: 60px;
+}
+
+.contact-center ul li a{
+    color : dodgerblue;
+    font-size: 130%;
 }
