--- a/css/global.css
+++ b/css/global.css
@@ -2,12 +2,13 @@
 /* CSS Document */
 /*YUI reset*/
 body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,button,textarea,p,blockquote,th,td{padding:0;margin:0;}
-body, button, input, select, textarea {font: 12px/1.5 tahoma,arial,宋体b8b\4f53;}
+body, button, input, select, textarea {font-family: "SF Pro SC","SF Pro Text","SF Pro Icons","PingFang SC","Helvetica Neue","Helvetica","Arial",sans-serif;}
 table {border-collapse:collapse; border-spacing:0;}
 i,em{font-style:normal;}
 img{ border:0; vertical-align:bottom;}
 li{list-style:none;}
-h1,h2,h3,h4,h5,h6,small{font-size:100%;}
+h1{font-size:300%}
+h2,h3,h4,h5,h6,small{font-size:100%;}
 a{ text-decoration:none; color:#666; cursor:pointer; outline:0; }
 a:hover{ text-decoration:none; }
 .clearfix:after {
